<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballscorecounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/green_grad" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:src="@color/background" />
    </LinearLayout>

    <TextView
        android:id="@+id/header"
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matches" />
    <!---Liverpool-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_margin="20dp"
        android:background="@drawable/match_box"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                style="@style/team_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/liverpool"
                android:src="@drawable/liverpool" />

            <TextView
                android:id="@+id/liverpol_score"
                style="@style/scoretext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <Button
                style="@style/goal"
                android:onClick="goalForLiverpool"
                android:text="@string/goal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin24"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"
                android:orientation="horizontal">

                <Button
                    style="@style/foul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="foulForLiverpool"
                    android:text="@string/foul" />

                <TextView
                    android:id="@+id/liverpool_foul"
                    style="@style/faulttext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/red_liverpool"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/icon_red_card"
                    android:onClick="redCardLiverpool"
                    android:text="" />

                <Button
                    android:id="@+id/yellow_liverpool"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/icon_yellow_card"
                    android:onClick="yellowCardLiverpool"
                    android:text="" />
            </LinearLayout>


        </LinearLayout>
        <!---Bar between teams-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            android:background="@android:color/darker_gray" />

        <!---Manchester-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                style="@style/team_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/manchester"
                android:src="@drawable/manchester_united" />

            <TextView
                android:id="@+id/manchester_score"
                style="@style/scoretext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <Button
                style="@style/goal"
                android:onClick="goalForManchester"
                android:text="@string/goal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin24"
                android:layout_marginLeft="@dimen/margin24"
                android:layout_marginRight="@dimen/margin24"
                android:orientation="horizontal">

                <Button
                    style="@style/foul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="foulForManchester"
                    android:text="@string/foul" />

                <TextView
                    android:id="@+id/manchester_foul"
                    style="@style/faulttext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/red_manchester"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/icon_red_card"
                    android:onClick="redCardManchester"
                    android:text="" />

                <Button
                    android:id="@+id/yellow_manchester"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/icon_yellow_card"
                    android:onClick="yellowCardManchester"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="resetScore"
        android:text="@string/reset" />
</RelativeLayout>
